// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio is disabled 1`] = `
<div
  aria-hidden="true"
  class="root disabled"
  role="presentation"
>
  <input
    class="input"
    disabled=""
    type="radio"
  />
  <div
    class="circle"
  />
</div>
`;

exports[`Radio is selected 1`] = `
<div
  aria-hidden="true"
  class="root selected"
  role="presentation"
>
  <input
    class="input"
    selected=""
    type="radio"
  />
  <div
    class="circle selected"
  />
</div>
`;

exports[`Radio renders correctly 1`] = `
<div
  aria-hidden="true"
  class="root"
  role="presentation"
>
  <input
    class="input"
    type="radio"
  />
  <div
    class="circle"
  />
</div>
`;

exports[`Radio renders with a label 1`] = `
<div
  aria-hidden="true"
  class="root"
  role="presentation"
>
  <input
    class="input"
    label="click here"
    type="radio"
  />
  <div
    class="circle"
  />
  <label
    class="label"
  >
    click here
  </label>
</div>
`;
